--- a/lovelace/views/01-home.yaml
+++ b/lovelace/views/01-home.yaml
@@ -915,7 +915,7 @@
                 card:
                   - width: 5px
                   - height: 60px
-            - type: custom:mod-card # robovac
+            - type: custom:stack-in-card
               style: |
                 ha-card {
                   height: 115px;
@@ -928,84 +928,83 @@
                       -4px -4px 4px 0 rgba(50, 50, 50,.5),4px 4px 4px 0 rgba(0,0,0,.15);
                     {% endif %}   
                 }
-              card:
-                type: custom:vertical-stack-in-card
-                cards:
-                  - type: entities
-                    entities:
-                      - entity: vacuum.robovac
-                        type: custom:multiple-entity-row
-                        name: Robovac
-                        show_state: false
-                        entities:
-                          - attribute: status
-                            name: Status
-                          - attribute: battery_level
-                            name: Battery
-                            unit: '%'
-                          - entity: counter.vacuum_counter
-                            name: Count
-                    style: |
-                      ha-card {
-                        height: 70px;
-                      }
-                  - type: horizontal-stack
-                    cards:
-                      - type: custom:button-card
-                        color: auto
-                        entity: vacuum.robovac
-                        size: 25%
-                        icon: mdi:play
-                        show_name: false
-                        tap_action:
-                          action: call-service
-                          service: vacuum.turn_on
-                          service_data:
-                            entity_id: vacuum.robovac
-                      - type: custom:button-card
-                        color: auto
-                        entity: vacuum.robovac
-                        size: 25%
-                        icon: mdi:pause
-                        show_name: false
-                        tap_action:
-                          action: call-service
-                          service: vacuum.pause
-                          service_data:
-                            entity_id: vacuum.robovac
-                      - type: custom:button-card
-                        color: auto
-                        entity: vacuum.robovac
-                        size: 25%
-                        icon: mdi:broom
-                        show_name: false
-                        tap_action:
-                          action: call-service
-                          service: vacuum.clean_spot
-                          service_data:
-                            entity_id: vacuum.robovac
-                      - type: custom:button-card
-                        color: auto
-                        entity: vacuum.robovac
-                        size: 25%
-                        icon: mdi:map-marker
-                        show_name: false
-                        tap_action:
-                          action: call-service
-                          service: vacuum.locate
-                          service_data:
-                            entity_id: vacuum.robovac
-                      - type: custom:button-card
-                        color: auto
-                        entity: vacuum.robovac
-                        size: 25%
-                        icon: mdi:home-map-marker
-                        show_name: false
-                        tap_action:
-                          action: call-service
-                          service: vacuum.return_to_base
-                          service_data:
-                            entity_id: vacuum.robovac
+              mode: vertical
+              cards:
+                - type: entities
+                  entities:
+                    - entity: vacuum.robovac
+                      type: custom:multiple-entity-row
+                      name: Robovac
+                      show_state: false
+                      entities:
+                        - attribute: status
+                          name: Status
+                        - attribute: battery_level
+                          name: Battery
+                          unit: '%'
+                        - entity: counter.vacuum_counter
+                          name: Count
+                  style: |
+                    ha-card {
+                      height: 70px;
+                    }
+                - type: horizontal-stack
+                  cards:
+                    - type: custom:button-card
+                      color: auto
+                      entity: vacuum.robovac
+                      size: 25%
+                      icon: mdi:play
+                      show_name: false
+                      tap_action:
+                        action: call-service
+                        service: vacuum.turn_on
+                        service_data:
+                          entity_id: vacuum.robovac
+                    - type: custom:button-card
+                      color: auto
+                      entity: vacuum.robovac
+                      size: 25%
+                      icon: mdi:pause
+                      show_name: false
+                      tap_action:
+                        action: call-service
+                        service: vacuum.pause
+                        service_data:
+                          entity_id: vacuum.robovac
+                    - type: custom:button-card
+                      color: auto
+                      entity: vacuum.robovac
+                      size: 25%
+                      icon: mdi:broom
+                      show_name: false
+                      tap_action:
+                        action: call-service
+                        service: vacuum.clean_spot
+                        service_data:
+                          entity_id: vacuum.robovac
+                    - type: custom:button-card
+                      color: auto
+                      entity: vacuum.robovac
+                      size: 25%
+                      icon: mdi:map-marker
+                      show_name: false
+                      tap_action:
+                        action: call-service
+                        service: vacuum.locate
+                        service_data:
+                          entity_id: vacuum.robovac
+                    - type: custom:button-card
+                      color: auto
+                      entity: vacuum.robovac
+                      size: 25%
+                      icon: mdi:home-map-marker
+                      show_name: false
+                      tap_action:
+                        action: call-service
+                        service: vacuum.return_to_base
+                        service_data:
+                          entity_id: vacuum.robovac
                   # - type: custom:button-card
                   #   show_icon: false
                   #   show_name: false
