--- a/lovelace/views/07-settings.yaml
+++ b/lovelace/views/07-settings.yaml
@@ -48,33 +48,8 @@
                 card:
                   - width: 5px
                   - height: 60px
-            - type: custom:mod-card
-              card:
-                type: custom:vertical-stack-in-card
-                # title: Wake up light
-                cards:
-                  - type: entities
-                    entities:
-                      - entity: input_boolean.wakeup
-                        name: Wake-up light
-                  - type: conditional
-                    conditions:
-                      - entity: input_boolean.wakeup
-                        state: 'on'
-                    card:
-                      type: entities
-                      style: |
-                        ha-card {
-                          background-color: var(--primary-background-color);
-                          border-radius: 15px;
-                          #box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.0); 
-                          box-shadow: 2px 2px rgba(0,0,0,0.0);
-                        }
-                      entities:
-                        - input_datetime.wakeup_alarm_time
-                        - input_number.wakeup_duration
-                        - entity: input_boolean.wakeup_weekends
-                          name: Weekends
+            - type: custom:stack-in-card
+              mode: vertical
               style: |
                 ha-card {
                   background-color: var(--primary-background-color);
@@ -86,6 +61,30 @@
                       -4px -4px 4px 0 rgba(50, 50, 50,.5),4px 4px 4px 0 rgba(0,0,0,.15);
                     {% endif %}
                 }
+              # title: Wake up light
+              cards:
+                - type: entities
+                  entities:
+                    - entity: input_boolean.wakeup
+                      name: Wake-up light
+                - type: conditional
+                  conditions:
+                    - entity: input_boolean.wakeup
+                      state: 'on'
+                  card:
+                    type: entities
+                    style: |
+                      ha-card {
+                        background-color: var(--primary-background-color);
+                        border-radius: 15px;
+                        #box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.0); 
+                        box-shadow: 2px 2px rgba(0,0,0,0.0);
+                      }
+                    entities:
+                      - input_datetime.wakeup_alarm_time
+                      - input_number.wakeup_duration
+                      - entity: input_boolean.wakeup_weekends
+                        name: Weekends
             - type: 'custom:button-card'
               show_icon: false
               show_name: false
