--- a/config/integrations/media_player.yaml
+++ b/config/integrations/media_player.yaml
@@ -52,7 +52,7 @@
 - platform: ps4_node
   host: !secret ps4waker_host
   ps4_ip: !secret ps4_ip
-  imagemap_json: https://raw.githubusercontent.com/Knapoc/homeassistant-config/master/games.json
+  imagemap_json: http://localhost:8123/local/games.json
 # - platform: androidtv
 #   name: braviatv_android
 #   host: !secret tv_tv1_ip
