--- a/.github/workflows/hass-config-check.yml
+++ b/.github/workflows/hass-config-check.yml
@@ -13,7 +13,7 @@ on:
     - cron: 0 12 * * *
 
 jobs:
-  lint-files:
+  yaml-lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -21,9 +21,10 @@ jobs:
         uses: ibiqlik/action-yamllint@v1.0.0
         with:
           config_file: .yamllint.yml
-  test-config:
+
+  hass-stable:
     runs-on: ubuntu-latest
-    needs: lint-files
+    needs: yaml-lint
     steps:
       - uses: actions/checkout@v2
       - name: create secrets file
@@ -32,19 +33,57 @@ jobs:
         run: touch config/sshkey && touch config/fail2ban.log && touch config/diskinfo.txt && touch config/diskinfo1.txt
       - name: fix external-dirs-whitelist
         run: awk '$1 == "homeassistant:"{t=1} t==1 && $1 == "whitelist_external_dirs:"{t++; next} t==2 && /:[[:blank:]]*$/{t=0} t != 2' config/configuration.yaml > config/configuration.yaml
-      - name: Home Assistant Configuration stable check
-        uses: ludeeus/action-ha-config-check@0.0.1
-        env:
-          ACTION_VERSION: STABLE
-          ACTION_CONFIG_PATH: config
-      - name: Home Assistant Configuration rc check
-        uses: ludeeus/action-ha-config-check@0.0.1
-        env:
-          ACTION_VERSION: RC
-          ACTION_CONFIG_PATH: config
-      - name: Home Assistant Configuration dev check
-        uses: ludeeus/action-ha-config-check@0.0.1
-        env:
-          ACTION_VERSION: DEV
-          ACTION_ALLOW_FAIL: True
-          ACTION_CONFIG_PATH: config
+      - name: Home Assistant Version
+        uses: "docker://homeassistant/home-assistant:stable"
+        with:
+          args: |
+            python -m homeassistant --version
+      - name: Home Assistant Version
+        uses: "docker://homeassistant/home-assistant:stable"
+        with:
+          args: |
+            python -m homeassistant --config ./config/ --script check_config --info all
+
+  hass-rc:
+    runs-on: ubuntu-latest
+    needs: yaml-lint
+    steps:
+      - uses: actions/checkout@v2
+      - name: create secrets file
+        run: mv .not_secrets.yaml config/secrets.yaml
+      - name: create files
+        run: touch config/sshkey && touch config/fail2ban.log && touch config/diskinfo.txt && touch config/diskinfo1.txt
+      - name: fix external-dirs-whitelist
+        run: awk '$1 == "homeassistant:"{t=1} t==1 && $1 == "whitelist_external_dirs:"{t++; next} t==2 && /:[[:blank:]]*$/{t=0} t != 2' config/configuration.yaml > config/configuration.yaml
+      - name: Home Assistant Version
+        uses: "docker://homeassistant/home-assistant:rc"
+        with:
+          args: |
+            python -m homeassistant --version
+      - name: Home Assistant Version
+        uses: "docker://homeassistant/home-assistant:rc"
+        with:
+          args: |
+            python -m homeassistant --config ./config/ --script check_config --info all
+
+  hass-dev:
+    runs-on: ubuntu-latest
+    needs: yaml-lint
+    steps:
+      - uses: actions/checkout@v2
+      - name: create secrets file
+        run: mv .not_secrets.yaml config/secrets.yaml
+      - name: create files
+        run: touch config/sshkey && touch config/fail2ban.log && touch config/diskinfo.txt && touch config/diskinfo1.txt
+      - name: fix external-dirs-whitelist
+        run: awk '$1 == "homeassistant:"{t=1} t==1 && $1 == "whitelist_external_dirs:"{t++; next} t==2 && /:[[:blank:]]*$/{t=0} t != 2' config/configuration.yaml > config/configuration.yaml
+      - name: Home Assistant Version
+        uses: "docker://homeassistant/home-assistant:dev"
+        with:
+          args: |
+            python -m homeassistant --version
+      - name: Home Assistant Version
+        uses: "docker://homeassistant/home-assistant:dev"
+        with:
+          args: |
+            python -m homeassistant --config ./config/ --script check_config --info all
