--- a/config/integrations/media_player.yaml
+++ b/config/integrations/media_player.yaml
@@ -1,4 +1,5 @@
 ---
+# media player config
 
 - platform: braviatv_psk
   name: braviatv_1
@@ -15,13 +16,11 @@
     - 'ORF 2 Wien HD'
     - 'ATV HD'
     - 'PULS 4 HD'
-    # - 'Sixx Austria'
     - 'Servus TV HD'
     - 'Das Erste HD'
     - 'ZDF HD'
     - 'ORF III HD'
     - 'ProSieben HD'
-    # - 'RTL'
     - 'SAT.1 HD'
     - 'RTL II'
     - 'kabel eins HD'
@@ -31,13 +30,8 @@
     - 'arte HD'
     - 'N24 doku'
     - 'ntv'
-    # - 'Phoenix HD'
-    # - 'Comedy Central/VIVA HD'
     - 'ZDF neo HD'
     - 'ZDF info HD'
-    # - 'SRF info HD'
-    # - 'MTV HD'
-    # - 'gotv'
     - 'Sky 1 HD'
     - 'PULS24 HD'
     - 'One HD'
@@ -45,17 +39,8 @@
     - 'Sky Sport HD 2'
     - 'Sky Sport Austria 1 HD'
     - 'Sky Sport Austria 2 HD'
-    # - 'Sky Sport Austria 3 HD'
-    # - 'Sky Sport Austria 4 HD'
     - 'ORF Sport+ HD'
-    # - 'Eurosport 1 HD'
-    # - 'Sky Sport News HD'
-    # - 'Sport 1 HD'
 - platform: ps4_node
   host: !secret ps4waker_host
   ps4_ip: !secret ps4_ip
   imagemap_json: http://localhost:8123/local/games.json
-# - platform: androidtv
-#   name: braviatv_android
-#   host: !secret tv_tv1_ip
-#   device_class: androidtv
