--- a/config/script/scripts.yaml
+++ b/config/script/scripts.yaml
@@ -1,4 +1,5 @@
 ---
+# some scripts
 
 wakeup_schlafzimmer:
   alias: 'Wakeup routine: lights and weather'
@@ -6,18 +7,12 @@ wakeup_schlafzimmer:
     - service: scene.turn_on
       data:
         entity_id: scene.deckenspots_nightlight
-    # - service: light.turn_on
-    #   data_template:
-    #     entity_id: light.deckenspots
-    #     brightness: 1
-    #     xy_color: [0.5609, 0.4042]
     - delay:
         seconds: 1
     - service: light.turn_on
       data_template:
         entity_id: light.deckenspots
         brightness: 40
-        # brightness: 146
         transition: '{{ states.input_number.wakeup_duration.state | multiply(60) | int }}'
 magic_mirror_shutdown:
   sequence:
