--- a/.not_secrets.yaml
+++ b/.not_secrets.yaml
@@ -1,9 +1,10 @@
-camera_url: http://127.0.0.1:80
+---
+# redacted secrets file
+
 darksky_ak: top1secretapikey
 device1: device_tracker.device_1
 device2: device_tracker.device_2
-dnsip_1: dnsip
-dnsip_2: example.domain.com
+dnsip_hostname: example.domain.com
 github_at: passwordpasswordpasswordpasswordpassword
 hass_baseurl: http://example.domain.com
 hass_config_lat: 17.140005
@@ -16,11 +17,11 @@ mail_acc_2_smtp: example.domain.com
 mail_acc_2_user: username
 mail_acc_3: mail@mail.com
 mqtt-int_port: 80
-mqtt_pw: password
-mqtt_uname: username
+mqtt_ip: 127.0.0.1
+mqtt_password: password
+mqtt_user: username
 mysql_db: mysql://user:password@example.domain.com/database?charset=utf8
 name_1: jim
-name_2: bo
 notify_ios: notify.some_phone
 path_fail2ban: fail2ban.log
 path_disk_0: diskinfo.txt
@@ -39,7 +40,7 @@ router_ip: 127.0.0.1
 router_login: username
 router_ssh: sshkey
 rpi_ip: 127.0.0.1
-shellcommand_rpi_shutdown: 'touch myass'
+rpi_shutdown_command: 'touch myass'
 ssl_domain: example.com
 template_1: '{% if states("person.jim") != "home" %}false{% else %}true{% endif %}'
 tv_tv1_ip: 127.0.0.1
