--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -116,7 +116,7 @@ mqtt:
 
 owntracks:
   max_gps_accuracy: 200
-  waypoints: True
+  waypoints: true
   waypoint_whitelist:
     - !secret name_1
   new_device_defaults:
