update config-check workflow

--- a/.not_secrets.yaml
+++ b/.not_secrets.yaml
@@ -23,9 +23,9 @@ mqtt_user: username
 mysql_db: mysql://user:password@example.domain.com/database?charset=utf8
 name_1: jim
 notify_ios: notify.some_phone
-path_fail2ban: fail2ban.log
-path_disk_0: diskinfo.txt
-path_disk_1: diskinfo1.txt
+path_fail2ban: /tmp/diskinfo/fail2ban.log
+path_disk_0: /tmp/diskinfo/diskinfo.txt
+path_disk_1: /tmp/diskinfo/diskinfo1.txt
 person_1: person.jim
 person_1_id: jim
 person_1_name: Jim
@@ -38,7 +38,7 @@ robovac_ip: 127.0.0.1
 robovac_localkey: password
 router_ip: 127.0.0.1
 router_login: username
-router_ssh: sshkey
+router_ssh: /tmp/diskinfo/sshkey
 rpi_ip: 127.0.0.1
 rpi_shutdown_command: 'touch myass'
 ssl_domain: example.com
