--- a/.github/workflows/hass-config-check.yml
+++ b/.github/workflows/hass-config-check.yml
@@ -24,65 +24,45 @@ jobs:
   hass-stable:
     runs-on: ubuntu-latest
     needs: yaml-lint
+    strategy:
+      matrix:
+        python-version: [3.7, 3.8]
     steps:
       - uses: actions/checkout@v2
-      - name: create secrets file
-        run: mv .not_secrets.yaml config/secrets.yaml
-      - name: create files
-        run: touch config/sshkey && touch config/fail2ban.log && touch config/diskinfo.txt && touch config/diskinfo1.txt
-      - name: fix external-dirs-whitelist
-        run: awk '$1 == "homeassistant:"{t=1} t==1 && $1 == "whitelist_external_dirs:"{t++; next} t==2 && /:[[:blank:]]*$/{t=0} t != 2' config/configuration.yaml > config/configuration.yaml
-      - name: Home Assistant Version
-        uses: "docker://homeassistant/home-assistant:stable"
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
         with:
-          args: |
-            python -m homeassistant --version
-      - name: Home Assistant Version
-        uses: "docker://homeassistant/home-assistant:stable"
-        with:
-          args: |
-            python -m homeassistant --config ./config/ --script check_config --info all
+          python-version: ${{ matrix.python-version }}
+      - name: Install Home Assistant Stable
+        run: pip3 install homeassistant
+      - name: prepare files
+        run: |
+          mv .not_secrets.yaml config/secrets.yaml
+          mkdir -p /tmp/diskinfo && chmod 775 /tmp/diskinfo
+          touch /tmp/diskinfo/fail2ban.log && touch /tmp/diskinfo/diskinfo.txt && touch /tmp/diskinfo/diskinfo1.txt && touch /tmp/diskinfo/sshkey
+          chmod 775 /tmp/diskinfo/*
+      - name: check config
+        run: python3 -m homeassistant --config config/ --script check_config
 
   hass-rc:
     runs-on: ubuntu-latest
     needs: yaml-lint
+    strategy:
+      matrix:
+        python-version: [3.7, 3.8]
     steps:
       - uses: actions/checkout@v2
-      - name: create secrets file
-        run: mv .not_secrets.yaml config/secrets.yaml
-      - name: create files
-        run: touch config/sshkey && touch config/fail2ban.log && touch config/diskinfo.txt && touch config/diskinfo1.txt
-      - name: fix external-dirs-whitelist
-        run: awk '$1 == "homeassistant:"{t=1} t==1 && $1 == "whitelist_external_dirs:"{t++; next} t==2 && /:[[:blank:]]*$/{t=0} t != 2' config/configuration.yaml > config/configuration.yaml
-      - name: Home Assistant Version
-        uses: "docker://homeassistant/home-assistant:rc"
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
         with:
-          args: |
-            python -m homeassistant --version
-      - name: Home Assistant Version
-        uses: "docker://homeassistant/home-assistant:rc"
-        with:
-          args: |
-            python -m homeassistant --config ./config/ --script check_config --info all
-
-  hass-dev:
-    runs-on: ubuntu-latest
-    needs: yaml-lint
-    steps:
-      - uses: actions/checkout@v2
-      - name: create secrets file
-        run: mv .not_secrets.yaml config/secrets.yaml
-      - name: create files
-        run: touch config/sshkey && touch config/fail2ban.log && touch config/diskinfo.txt && touch config/diskinfo1.txt
-      - name: fix external-dirs-whitelist
-        run: awk '$1 == "homeassistant:"{t=1} t==1 && $1 == "whitelist_external_dirs:"{t++; next} t==2 && /:[[:blank:]]*$/{t=0} t != 2' config/configuration.yaml > config/configuration.yaml
-      - name: Home Assistant Version
-        uses: "docker://homeassistant/home-assistant:dev"
-        with:
-          args: |
-            python -m homeassistant --version
-      - name: Home Assistant Version
-        uses: "docker://homeassistant/home-assistant:dev"
-        with:
-          args: |
-            python -m homeassistant --config ./config/ --script check_config --info all
+          python-version: ${{ matrix.python-version }}
+      - name: Install Home Assistant Beta
+        run: pip3 install --pre homeassistant
+      - name: prepare files
+        run: |
+          mv .not_secrets.yaml config/secrets.yaml
+          mkdir -p /tmp/diskinfo && chmod 775 /tmp/diskinfo
+          touch /tmp/diskinfo/fail2ban.log && touch /tmp/diskinfo/diskinfo.txt && touch /tmp/diskinfo/diskinfo1.txt && touch /tmp/diskinfo/sshkey
+          chmod 775 /tmp/diskinfo/*
+      - name: check config
+        run: python3 -m homeassistant --config config/ --script check_config
