--- a/.not_secrets.yaml
+++ b/.not_secrets.yaml
@@ -5,6 +5,7 @@ darksky_ak: top1secretapikey
 device1: device_tracker.device_1
 device2: device_tracker.device_2
 dnsip_hostname: example.domain.com
+favicon: '/local/blub.png'
 github_at: passwordpasswordpasswordpasswordpassword
 hass_baseurl: http://example.domain.com
 hass_config_lat: 17.140005
