--- a/config/integrations/media_player.yaml
+++ b/config/integrations/media_player.yaml
@@ -43,4 +43,4 @@
 - platform: ps4_node
   host: !secret ps4waker_host
   ps4_ip: !secret ps4_ip
-  imagemap_json: http://localhost:8123/local/games.json
+  imagemap_json: 'https://raw.githubusercontent.com/Knapoc/home-assistant-config/master/config/www/games.json'
