--- a/config/lovelace/views/04-server.yaml
+++ b/config/lovelace/views/04-server.yaml
@@ -519,7 +519,7 @@
             - type: entities
               show_header_toggle: false
               entities:
-                - entity: sensor.mypublicip
+                - entity: sensor.dns_lookup
                   name: Public IP
                 - entity: sensor.speedtest_ping
                   name: Ping
