--- a/config/integrations/media_player.yaml
+++ b/config/integrations/media_player.yaml
@@ -43,4 +43,5 @@
 - platform: ps4_node
   host: !secret ps4waker_host
   ps4_ip: !secret ps4_ip
-  imagemap_json: 'https://raw.githubusercontent.com/Knapoc/home-assistant-config/master/config/www/games.json'
+  games_filename: 'misc/ps4-games.json'
+  local_store: 'misc/games.json'
